[gd_scene load_steps=6 format=3 uid="uid://2kbbongpgakm"]

[ext_resource type="FontFile" uid="uid://doedntugj2cb8" path="res://assets/ttf/Barrio-Regular.ttf" id="1_p8ecq"]
[ext_resource type="Script" uid="uid://nvyvf5bpbw3x" path="res://src/main_menu.gd" id="1_wyhiu"]
[ext_resource type="Theme" uid="uid://coisw4631bd4b" path="res://assets/engine/button_theme.tres" id="2_wyhiu"]
[ext_resource type="Texture2D" uid="uid://dbwl4uubtdr7t" path="res://assets/png/Untitled_Artwork-26.png" id="4_wajxv"]

[sub_resource type="LabelSettings" id="LabelSettings_wyhiu"]
font = ExtResource("1_p8ecq")
font_size = 60

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wyhiu")

[node name="HSplitContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="HSplitContainer/VBoxContainer"]
layout_mode = 2
text = "prova da corrida"
label_settings = SubResource("LabelSettings_wyhiu")
horizontal_alignment = 1

[node name="Button" type="Button" parent="HSplitContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 35)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_wyhiu")
text = "jogar"

[node name="Container" type="CenterContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="UntitledArtwork-26" type="Sprite2D" parent="HSplitContainer/Container"]
texture_filter = 1
position = Vector2(254, 436)
scale = Vector2(10.6563, 10.6563)
texture = ExtResource("4_wajxv")

[connection signal="pressed" from="HSplitContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
